--- a/Projet_3/index.html
+++ b/Projet_3/index.html
@@ -52,7 +52,7 @@
         </section>
         <footer>
             <p class="mentions_contact"><a href="mentions.html">Mentions légales</a></p>
-            <p class="mentions_contact">Contactez-nous</p>
+            <p class="mentions_contact"><a href="...">Contactez-nous</a></p>
         </footer>
     </body>
 </html>
