--- a/Projet_3/menu1.html
+++ b/Projet_3/menu1.html
@@ -15,7 +15,7 @@
 
         <p id="titre">La note enchantée</p>
 
-       <main class="menu1"> 
+       <main id="menu1"> 
                <section class="menu menu-la-note-enchantee">
             <div class="nom_restaurant">
                 <h2 class="nom_restaurant-titre-la-note-enchantee">La note enchantée</h2>
