--- a/Projet_3/menu2.html
+++ b/Projet_3/menu2.html
@@ -11,7 +11,7 @@
         <header>
             <h1><a href="index.html">ohmyfood</a></h1>
         </header>
-       <main class="menu2"> 
+       <main id="menu2"> 
 
         <section class="menu menu-le-chic-a-la-francaise">
             <div class="nom_restaurant">
