--- a/Projet_3/menu3.html
+++ b/Projet_3/menu3.html
@@ -11,7 +11,7 @@
         <header>
             <h1><a href="index.html">ohmyfood</a></h1>
         </header>
-        <p class="menu8_titre">Le délice des papilles</p>
+        <p class="menu_titre">Le délice des papilles</p>
         
         <main class="menu3"> 
         <section class="menu menu-le-delice-des-papilles">
