--- a/cv rewrite7/cv7.html
+++ b/cv rewrite7/cv7.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<main class="container fluid">
+	<main class="container-fluid">
 		<div class="row">
 			<!-- Colonne de presentation -->
 			<aside class="col-md-4 p-3 bg-warning d-flex flex-column">
@@ -50,7 +50,7 @@
 
 					<div class="row text-justify">
 						<p class="col-10 mx-auto text-center"></p>
-						<p class="col-10 mx-auto"> Après avoir validé le parcours développeur web proposé par la plateforme Openclassrooms; j'accompagne désormais entreprises et particuliers dans leurs rêves de transformation digitale à travers la conception et la création de sites web en Html, CSS, JavaScript, PHP et MySQL. Blogs, réseaux sociaux, sites e-commerce, API; de la maquette au produit fini en passant par l'intégration de contenus multimédias, et la maintenance je m'attache à repondre à toutes les exigences de mes clients. </p>
+						<p class="col-10 mx-auto"> Après avoir validé le parcours développeur web proposé par la plateforme Openclassrooms; j'accompagne désormais entreprises et particuliers dans leurs rêves de transformation digitale à travers la conception et la création de sites web en Html, CSS, JavaScript, PHP et MySQL. Blogs, réseaux sociaux, sites e-commerce, API; de la maquette au produit fini en passant par l'intégration de contenus multimédias, l'optimisation du référencement et la maintenance je m'attache à repondre à toutes les exigences de mes clients. </p>
 					</div>
 
 				</section>
@@ -105,7 +105,7 @@
 					<article class="row mt-3 mb-3">
 						<ul class="col-4">
 							<dl><i class="far fa-dot-circle mr-2 mb-0"></i>2019-2020<br>
-								<p class=ml-3>À distance</p>
+								<p class="ml-3">À distance</p>
 							</dl>
 						</ul>
 						<div class="col-8">
@@ -188,12 +188,12 @@
 							<h5>LAURENCE BERGER</h5>
 							<p><strong>Directrice: Films du jeudi</strong></p>
          					<p class="mb-0">Téléphone: 00 00 00 00 00</p>
-         					<p class="mb-0">Email: lesfilmsdujeudi@gmail.com</p>
+         					<p class="mb-0">Email: filmsdujeudi@gmail.com</p>
 						</div>
 
 						<div class="col-md-6 col-lg-5 mb-3 ml-auto">
 							<h5>FLORENCE PORRAT</h5>
-							<p><strong>Directrice: ISO AMSTERDAM</strong></p>
+							<p><strong>Directrice: ISO Amsterdam</strong></p>
          					<p class="mb-0">Téléphone: 00 00 00 00 00</p>
          					<p class="mb-0">Email: isoamsterdam.com</p>
 						</div>
