--- a/Projet_3/index.html
+++ b/Projet_3/index.html
@@ -16,7 +16,7 @@
             <section id="menu1">
                 <a href="menu1.html"><!--lien html-->
                     <div class="contenu">
-                        <img src="..." alt="Une note de musique">
+                        <img src="une_note_de_musique.png" alt="Une note de musique">
                         <h2>La note enchantée</h2>
                         <h3>Menu</h3>
                     </div>
