--- a/Projet_3/menu2.html
+++ b/Projet_3/menu2.html
@@ -11,6 +11,9 @@
         <header>
             <h1><a href="index.html">ohmyfood</a></h1>
         </header>
+        <div class="menu__titre">Le chic à la francaise</div>
+
+
        <main id="menu2"> 
 
         <section class="menu menu-le-chic-a-la-francaise">
@@ -24,7 +27,7 @@
                     <h3 class="h3-le-chic-a-la-francaise">Pour se mettre en apétit</h3>
                     <hr class="trait2">
                 </div>
-                <div class="assiette assiette-le-chic-a-la-farncaise">
+                <div class="assiette assiette-le-chic-a-la-francaise">
                     <p>Tartare de poulpe acidulé aux zestes d'orange</p>
                     <p class="prix">79€</p>
                 </div>
@@ -82,8 +85,8 @@
         </section>
         
         <footer>
-            <p class="mentions_contact">Mentions légales</p>
-            <p class="mentions_contact">Contactez-nous</p>
+            <p class="mentions_contact"><a href="mentions.html">Mentions légales</a></p>
+            <p class="mentions_contact"><a href="...">Contactez-nous</a></p>
         </footer>
     </body>
 </html>
