--- a/Projet_3/menu3.html
+++ b/Projet_3/menu3.html
@@ -11,9 +11,9 @@
         <header>
             <h1><a href="index.html">ohmyfood</a></h1>
         </header>
-        <p class="menu_titre">Le délice des papilles</p>
+        <div class="menu__titre">Le délice des papilles</div>
         
-        <main class="menu3"> 
+        <main id="menu3"> 
         <section class="menu menu-le-delice-des-papilles">
             <div class="nom_restaurant">
                 <h2 class="nom_restaurant-titre-le-delice-des-papilles">Le délice des papilles</h2>
@@ -85,8 +85,8 @@
             <button>Prochainement<span id="span1">.</span><span id="span2">.</span><span id="span3">.</span></button>
         </section>
         <footer>
-            <p class="mentions_contact">Mentions légales</p>
-            <p class="mentions_contact">Contactez-nous</p>
+            <p class="mentions_contact"><a href="mentions.html">Mentions légales</a></p>
+            <p class="mentions_contact"><a href="...">Contactez-nous</a></p>
         </footer>
     </body>
 </html>
