--- a/Projet_3/menu4.html
+++ b/Projet_3/menu4.html
@@ -9,12 +9,12 @@
     </head>
     <body>
         <header>
-            <h1><a>ohmyfood</a><a href="index.html"></a></h1>
+            <h1><a href="index.html">ohmyfood</a></h1>
         </header>
         
-        <p class="menu__titre">La palette du goût</p>
+        <div class="menu__titre">La palette du goût</div>
         
-        <main class="menu4"> 
+        <main id="menu4"> 
         <section class="menu menu-la-palette-du-gout">
             <article class="nom_restaurant">
                 <h2 class="nom_restaurant-titre-la-palette-du-gout">La palette du gout</h2>
@@ -78,8 +78,8 @@
             <button>Prochainement<span id="span1">.</span><span id="span2">.</span><span id="span3">.</span></button>
         </section>
         <footer>
-            <p class="mentions_contact">Mentions légales</p>
-            <p class="mentions_contact">Contactez-nous</p>
+            <p class="mentions_contact"><a href="mentions.html">Mentions légales</a></p>
+            <p class="mentions_contact"><a href="...">Contactez-nous</a></p>
         </footer>
     </body>
 </html>
