exo go full stack

--- a/Projet_3/menu1.html
+++ b/Projet_3/menu1.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.ico" />
      <!--lien vers photos logo svg etc ..-->
         <title>ohmyfood</title>
     </head>
@@ -91,9 +92,6 @@
         </main>
 
 
-        <section id="prochainement">
-            <button>Prochainement<span id="span1">.</span><span id="span2">.</span><span id="span3">.</span></button>
-        </section>
 
             <footer>
                 <p class="mentions_contact"><a href="mentions.html">Mentions légales</a></p>
