--- a/Projet_3/index.html
+++ b/Projet_3/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type="text/css" rel="stylesheet" href="style.css">
+        <link type="text/css" rel="stylesheet" href="mainstyle.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gotu-regular">
+        <link rel="icon" href="favicon.ico" />
      <!--lien vers photos logo svg etc ..-->
         <title>ohmyfood</title>
     </head>
@@ -13,6 +14,8 @@
             <h1><a>ohmyfood</a></h1>
         </header>
         <main id="menus">
+           
+        <div class="bloc-1">
             <section id="menu1">
                 <a href="menu1.html"><!--lien html-->
                     <div class="contenu">
@@ -30,6 +33,10 @@
                     </div>
                 </a>
             </section>
+        </div> 
+
+
+        <div class="bloc-2">
             <section id="menu3">
                 <a href="menu3.html">
                     <div class="contenu">
@@ -46,13 +53,14 @@
                     </div>
                 </a>
             </section>
+        </div>
         </main>
         <section id="prochainement">
             <button>Prochainement<span id="span1">.</span><span id="span2">.</span><span id="span3">.</span></button>
         </section>
         <footer>
             <p class="mentions_contact"><a href="mentions.html">Mentions légales</a></p>
-            <p class="mentions_contact"><a href="...">Contactez-nous</a></p>
+            <p class="mentions_contact"><a href="mailto:test@gmail.com">Contactez-nous</a></p>
         </footer>
     </body>
 </html>
