--- a/Projet_3/mentions.html
+++ b/Projet_3/mentions.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.ico" />
         <title>Mentions légales</title>
     </head>
     <body>
